--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,15 +23,14 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install dependencies
+      - name: Install dependencies and run tests
         run: |
           sudo apt-get update -qq
           sudo apt-get -y install libsndfile1
           python -m venv venv
           source venv/bin/activate
           pip install ".[docs,dev]"
-      - name: Run tests
-        run: python -m pytest --cov dispel --cov-report term --cov-report xml:coverage.xml --junitxml junit.xml
+          python -m pytest --cov dispel --cov-report term --cov-report xml:coverage.xml --junitxml junit.xml
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v2
         with:
@@ -73,10 +72,10 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: '3.10'
-      - name: Install dependencies
-        run: pip install ".[docs]" pytest
-      - name: Run doctest
-        run: python -m pytest --doctest-glob="*.rst" --doctest-plus ".[docs,dispel]" --junitxml junit.xml
+      - name: Install dependencies and run doc tests
+        run: |
+          pip install ".[docs]" pytest
+          python -m pytest --doctest-glob="*.rst" --doctest-plus ".[docs,dispel]" --junitxml junit.xml
 
   release:
     runs-on: ubuntu-latest
