--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches:
       - main
-      - '!release'
+      - release
   pull_request:
     branches:
       - main
@@ -111,3 +111,18 @@ jobs:
         with:
           publish_dir: ./docs/_build/html
           github_token: ${{ secrets.GITHUB_TOKEN }}
+
+  publish:
+    runs-on: ubuntu-latest
+    needs: release
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.10
+      - name: Build and publish
+        run: |
+          pip install build twine
+          python -m build
+          twine upload dist/* -u ${{ secrets.PYPI_USERNAME }} -p ${{ secrets.PYPI_PASSWORD }}
