--- a/.releaserc.yaml
+++ b/.releaserc.yaml
@@ -3,6 +3,6 @@ plugins:
   - "@semantic-release/release-notes-generator"
   - "@semantic-release/changelog"
   - "@semantic-release/git"
-  - "@semantic-release/gitlab"
+  - "@semantic-release/github"
 branches:
   - "release"
