--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,7 @@ env:
 jobs:
   test:
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
     strategy:
       matrix:
         python-version: [3.9, '3.10']
@@ -78,7 +79,6 @@ jobs:
           python -m pytest --doctest-glob="*.rst" --doctest-plus ".[docs,dispel]" --junitxml junit.xml
 
   release:
-    needs: test
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/release'
     steps:
