--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ authors = [
     {name = "Alf Scotland and Gautier Cosne and Adrien Juraver and Angelos Karatsidis and Joaquin Penalver de Andres"},
 ]
 description = "A python DIgital Signal ProcEssing Library developed to standardize extraction of sensor-derived measures (SDMs) from wearables or smartphones data."
-readme = "README.rst"
+readme = "README.md"
 classifiers = [
     'Development Status :: 2 - Pre-Alpha',
     'Intended Audience :: Developers',
